[package]
name = "ast-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
serde_v8 = "0.119.0"
swc_atoms = "0.5.9"
swc_common = "0.32.0"
swc_ecma_ast = { version = "0.109.0", features = ["serde-impl"] }
swc_ecma_parser = "0.139.0"
v8 = "0.75.1"
